     "end turn" button/hotkey. (bug #19901)
   * Fixed crash when an ally executes a planned move of an unit with 2 planned
     moves. (bug #19826)
 * WML engine:
   * Image path functions again evaluated left-to-right. Fixes bug #20196.
 * Miscellaneous and bug fixes:
   * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).

Version 1.10.4:
 * Campaigns:
   * A Tale of Two Brothers:
     * Fix bug #19949: Turns left counter initially incorrect when objectives
       change and turn limit is extended
   * Son of the Black Eye:
     * Fixed bug #19686: fixed two variable checks that prevented some strings
       from being displayed in Back Home
   * Sceptre of Fire:
     * Keep recall list at end of scenario 7
   * Under the Burning Suns:
     * Taking the ring of speed is now optional
 * Language and i18n:
   * Updated translations: British English, Chinese (Simplified). Chinese
     (Traditional), French, Galician, German, Greek, Hungarian, Japanese, Latin,
     Lithuanian, Old English, Russian, Serbian, Slovak, Spanish, Ukrainian
 * Terrain:
   * Improve appearance inside natural cave wall terrain areas (Xu)
   * Improve appearance of sand near dirt with transitions
 * User interface:
   * Trying to initiate movement (or an attack) before previous movement is
     finished no longer unselects the current unit (bug #19734). (The new
     movement command is still deliberately ignored.)
   * Fixed bug #19783: Disable commands while WML menu items are executing.
   * Fixed bug #19533: Both damage tooltips now take into account local factors.
 * WML engine:
   * Fixed CALL_FUNCTION macro (bug #19805)
 * Miscellaneous and bug fixes:
   * Fix bug #19753, missing hex transition
   * Fixed: Allow strict compilation with CMake using the upcoming gcc-4.8.
   * Fixed bug #19795: OOS when [message][option] is used in a (single-player)
     start event when side 1's controller is null.

Version 1.10.3:
 * Campaigns:
   * Heir to the Throne: