@@ -19,6 +19,7 @@ Version 1.10.4+svn:
    * Image path functions again evaluated left-to-right. Fixes bug #20196.
  * Miscellaneous and bug fixes:
    * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
+   * Fixed: Compilation with Boost 1.51.0 (Gentoo bug #440742).
 
 Version 1.10.4:
  * Campaigns:
